// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonTable component should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="Loading"
        class="pf-v5-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-1"
        data-ouia-component-type="PF5/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v5-c-table__thead"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-1"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v5-c-table__th"
              scope="col"
              tabindex="-1"
            >
              first
            </th>
            <th
              class="pf-v5-c-table__th"
              scope="col"
              tabindex="-1"
            >
              second
            </th>
          </tr>
        </thead>
        <tbody
          class="pf-v5-c-table__tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-2"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-3"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-4"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-5"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-6"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="Loading"
      class="pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v5-c-table__th"
            scope="col"
            tabindex="-1"
          >
            first
          </th>
          <th
            class="pf-v5-c-table__th"
            scope="col"
            tabindex="-1"
          >
            second
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-4"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-5"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-6"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SkeletonTable component should render correctly with rows 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="Loading"
        class="pf-v5-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-2"
        data-ouia-component-type="PF5/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v5-c-table__thead"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-7"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v5-c-table__th"
              scope="col"
              tabindex="-1"
            >
              first
            </th>
            <th
              class="pf-v5-c-table__th"
              scope="col"
              tabindex="-1"
            >
              second
            </th>
          </tr>
        </thead>
        <tbody
          class="pf-v5-c-table__tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-8"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-9"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-10"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-11"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-12"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-u-screen-reader"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="Loading"
      class="pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-7"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v5-c-table__th"
            scope="col"
            tabindex="-1"
          >
            first
          </th>
          <th
            class="pf-v5-c-table__th"
            scope="col"
            tabindex="-1"
          >
            second
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-8"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-9"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-10"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-11"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-12"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-u-screen-reader"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
